src-ken&y/objects/Reason_Code__c.object
<CustomObject>
    <customHelpPage>HelpReasonCode</customHelpPage>
    <description>Reason Code</description>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Options can be either &quot;Traffic&quot; or &quot;Broker&quot;.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traffic</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Allowance Accrual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <inlineHelpText>Alphanumeric code that identifies the reason code.</inlineHelpText>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <description>Identifier used to link this reason code to a company at data load time</description>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Reason Codes</relationshipLabel>
        <relationshipName>Reason_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Reason Codes</relationshipLabel>
        <relationshipName>Reason_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Numeric_Field_1__c</fullName>
        <description>Holds a numeric value for the record</description>
        <inlineHelpText>A numeric value for the reason code.</inlineHelpText>
        <label>Numeric Field 1</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for data loading</description>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reason_Code_Unique__c</fullName>
        <description>Name for uniqueness</description>
        <label>Reason Code Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Over/Short/Damaged</fullName>
                </value>
                <value>
                    <fullName>Unsaleables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory Change</fullName>
                </value>
                <value>
                    <fullName>Inventory Transfer</fullName>
                </value>
                <value>
                    <fullName>Deductions</fullName>
                </value>
                <value>
                    <fullName>Cycle Count</fullName>
                </value>
                <value>
                    <fullName>BracketPricing</fullName>
                </value>
                <value>
                    <fullName>Resolution</fullName>
                </value>
                <value>
                    <fullName>Substitution</fullName>
                </value>
                <value>
                    <fullName>Invoice Hold</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reason Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>Numeric_Field_1__c</columns>
        <columns>Reason_Code_Unique__c</columns>
        <columns>Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reason Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reason Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>